emotion diary app 배포

--- a/emotion_diary/src/components/DiaryItem.css
+++ b/emotion_diary/src/components/DiaryItem.css
@@ -42,6 +42,8 @@
 .DiaryItem .info_section {
   flex: 1;
   cursor: pointer;
+  max-height: 80px;
+  overflow-y: hidden;
 }
 
 .DiaryItem .info_section .created_date {
